# kabanchiki

./: .editorconfig  .gitattributes  .gitignore  README.md  deploy-miniapp.bat  deploy-miniapp.ps1
android/: local.properties.example  settings.gradle.kts
desktop/: Kabanchiki.spec  README.md  config.example.json  pyproject.toml  requirements.txt  version_info.txt
desktop/src/: main.py
desktop/src/kabanchiki_admin/: __init__.py  app_identity.py  backend.py  config.py  i18n.py  models.py
desktop/src/kabanchiki_admin/i18n/: uk_UA.qm  uk_UA.ts
desktop/src/kabanchiki_admin/qml/: AcornAmount.qml  AdjustBalanceDialog.qml  AppButton.qml  AppCheckBox.qml  AppComboBox.qml  AppDialog.qml  AppMenu.qml  AppMenuItem.qml  AppMenuSeparator.qml  AppTextField.qml  Avatar.qml  AvatarCropDialog.qml  AvatarPicker.qml  BalancesPage.qml  BonusDialog.qml  Card.qml  ChildDialog.qml  ChildEditDialog.qml  Chip.qml  ConfirmDialog.qml  ConnectScreen.qml  ConnectionSetupScreen.qml  DeadlineField.qml  DeadlinePicker.qml  DifficultyBadge.qml  ImageThumb.qml  JobDialog.qml  JobsPage.qml  JournalPage.qml  Lightbox.qml  LocationDialog.qml  Main.qml  NavButton.qml  NoteDialog.qml  OwnerEditDialog.qml  PasswordDialog.qml  PayoutDialog.qml  PhotoGridInput.qml  PresenceBadge.qml  PublishUpdateDialog.qml  (+13 more)
desktop/src/kabanchiki_admin/services/: gdrive_service.py  geocode_service.py  image_service.py  notification_service.py  realtime_service.py  storage_service.py  supabase_service.py
desktop/tests/: test_calc.py
desktop/tools/: merge_drive_folders.py  migrate_to_drive.py
docs/: README.md  (+2 more)
(+147 files in other folders)
